--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,9 +8,9 @@ fingerprint: "sha256"
 # 日期格式
 dateFormat: 2006-01-02
 # 网站标题, 用于 Open Graph 和 Twitter Cards
-title: 木杉博客
+# title: 木杉
 # 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-description: 木杉博客，记录日常
+# description: 木杉博客，记录日常
 # 网站图片, 用于 Open Graph 和 Twitter Cards
 # images:
 #   - /logo.png
@@ -46,7 +46,7 @@ footer:
   # 是否显示作者
   author: true
   # 网站创立年份
-  since: 2022
+  since: 2020
   # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
   icp: "鲁ICP备18021776号"
   # # 许可协议信息 (支持 HTML 格式)
@@ -89,25 +89,25 @@ list:
 
 # 搜索配置
 search:
-  enable: false
+  enable: true
   # 搜索引擎的类型 ["lunr", "algolia"]
   type: lunr
   # 文章内容最长索引长度
-  contentLength: 4000
+  contentLength: 300
   # 搜索框的占位提示语
   placeholder: "请输入关键词"
   # 最大结果数目
   maxResultLength: 10
   # 结果内容片段长度
-  snippetLength: 50
+  snippetLength: 30
   # 搜索结果中高亮部分的 HTML 标签
   highlightTag: em
   # 是否在搜索索引中使用基于 baseURL 的绝对路径
   absoluteURL: false
-  algolia:
-    index: ""
-    appID: ""
-    searchKey: ""
+  # algolia:
+  #   index: ""
+  #   appID: ""
+  #   searchKey: ""
 
 # 主页配置
 home:
@@ -134,14 +134,11 @@ home:
     enable: true
     # 主页每页显示文章数量
     paginate: 5
-    # 被 params.page 中的 hiddenFromHomePage 替代
-    # 当你没有在文章前置参数中设置 "hiddenFromHomePage" 时的默认行为
-    defaultHiddenFromHomePage: true
 
 # 作者的社交信息设置
 social:
   GitHub: "https://github.com/mushan-zb"
-  Email: mushan.zb@gmail.com
+  Email: "mushan.zb@gmail.com"
   # Linkedin: ""
   # Twitter: xxxx
   # Instagram: xxxx
@@ -218,24 +215,24 @@ social:
 
 # 文章页面全局配置
 page:
-  # # 是否在主页隐藏一篇文章
-  # hiddenFromHomePage: false
-  # # 是否在搜索结果中隐藏一篇文章
-  # hiddenFromSearch: false
-  # # 是否使用 twemoji
-  # twemoji: false
-  # # 是否使用 lightgallery
-  # lightgallery: false
-  # # 是否使用 ruby 扩展语法
-  # ruby: false
-  # # 是否使用 fraction 扩展语法
-  # fraction: false
-  # # 是否使用 fontawesome 扩展语法
-  # fontawesome: false
-  # # 是否在文章页面显示原始 Markdown 文档链接
-  # linkToMarkdown: true
-  # # 是否在 RSS 中显示全文内容
-  # rssFullText: false
+  # 是否在主页隐藏文章
+  hiddenFromHomePage: true
+  # 是否在搜索结果中隐藏文章
+  hiddenFromSearch: false
+  # 是否使用 twemoji
+  twemoji: false
+  # 是否使用 lightgallery
+  lightgallery: false
+  # 是否使用 ruby 扩展语法
+  ruby: false
+  # 是否使用 fraction 扩展语法
+  fraction: false
+  # 是否使用 fontawesome 扩展语法
+  fontawesome: false
+  # 是否在文章页面显示原始 Markdown 文档链接
+  linkToMarkdown: true
+  # 是否在 RSS 中显示全文内容
+  rssFullText: false
   # 目录配置
   toc:
     # 是否使用目录
@@ -308,11 +305,6 @@ page:
   # 评论系统设置
   comment:
     enable: true
-    # Disqus 评论系统设置
-    # disqus:
-    #   enable: false
-    #   # Disqus 的 shortname，用来在文章中启用 Disqus 评论系统
-    #   shortname: ""
     # Gitalk 评论系统设置
     gitalk:
       enable: true
@@ -320,6 +312,11 @@ page:
       repo: "mushan-zb.github.io"
       clientId: "530a27e2e7c66133b4ea"
       clientSecret: "f8d3909650ee2a364ca9a0067be5252483ca5563"
+    # Disqus 评论系统设置
+    # disqus:
+    #   enable: false
+    #   # Disqus 的 shortname，用来在文章中启用 Disqus 评论系统
+    #   shortname: ""
     # Valine 评论系统设置
     # valine:
     #   enable: false
