--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,19 +1,11 @@
 # 网站默认主题样式 ["auto", "light", "dark"]
 defaultTheme: auto 
-# 公共 git 仓库路径，仅在 enableGitInfo 设为 true 时有效
-# gitRepo: ""
+
 # 哪种哈希函数用来 SRI, 为空时表示不使用 SRI
 # ["sha256", "sha384", "sha512", "md5"]
 fingerprint: "sha256"
 # 日期格式
 dateFormat: 2006-01-02
-# 网站标题, 用于 Open Graph 和 Twitter Cards
-# title: 木杉
-# 网站描述, 用于 RSS, SEO, Open Graph 和 Twitter Cards
-# description: 木杉博客，记录日常
-# 网站图片, 用于 Open Graph 和 Twitter Cards
-# images:
-#   - /logo.png
 
 # 页面头部导航栏配置
 header:
@@ -37,8 +29,7 @@ header:
 # 页面底部信息配置
 footer:
   enable: true
-  # 自定义内容 (支持 HTML 格式)
-  # custom: "感谢支持"
+  custom: ""
   # 是否显示 Hugo 和主题信息
   hugo: true
   # 是否显示版权信息
@@ -49,10 +40,6 @@ footer:
   since: 2020
   # ICP 备案信息，仅在中国使用 (支持 HTML 格式)
   icp: "鲁ICP备18021776号"
-  # # 许可协议信息 (支持 HTML 格式)
-  # license: <a rel="license external nofollow noopener noreffer"
-  #   href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC
-  #   BY-NC 4.0</a>
 
 # Section (所有文章) 页面配置
 section:
@@ -71,21 +58,6 @@ list:
   dateFormat: 01-02
   # RSS 文章数目
   # rss: 10
-
-# 应用图标配置
-# app:
-#   # 当添加到 iOS 主屏幕或者 Android 启动器时的标题, 覆盖默认标题
-#   title: 木杉
-#   # 是否隐藏网站图标资源链接
-#   noFavicon: false
-#   # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
-#   svgFavicon: ""
-#   # Android 浏览器主题色
-#   themeColor: "#ffffff"
-#   # Safari 图标颜色
-#   iconColor: "#5bbad5"
-#   # Windows v8-10磁贴颜色
-#   tileColor: "#da532c"
 
 # 搜索配置
 search:
@@ -112,14 +84,10 @@ search:
 # 主页配置
 home:
   # RSS 文章数目
-  # rss: 10
+  rss: 10
   # 主页个人信息
   profile:
     enable: true
-    # Gravatar 邮箱，用于优先在主页显示的头像
-    # gravatarEmail: ""
-    # 主页显示头像的 URL
-    # avatarURL: /images/avatar.png
     # 主页显示的网站标题 (支持 HTML 格式)
     title: "木杉"
     # 主页显示的网站副标题 (允许 HTML 格式)
@@ -129,7 +97,7 @@ home:
     # 是否显示社交账号
     social: true
     # 免责声明 (支持 HTML 格式)
-    # disclaimer: ""
+    disclaimer: ""
   posts:
     enable: true
     # 主页每页显示文章数量
@@ -139,84 +107,12 @@ home:
 social:
   GitHub: "https://github.com/mushan-zb"
   Email: "mushan.zb@gmail.com"
-  # Linkedin: ""
-  # Twitter: xxxx
-  # Instagram: xxxx
-  # Facebook: xxxx
-  # Telegram: xxxx
-  # Medium: ""
-  # Gitlab: ""
-  # Youtubelegacy: ""
-  # Youtubecustom: ""
-  # Youtubechannel: ""
-  # Tumblr: ""
-  # Quora: ""
-  # Keybase: ""
-  # Pinterest: ""
-  # Reddit: ""
-  # Codepen: ""
-  # FreeCodeCamp: ""
-  # Bitbucket: ""
-  # Stackoverflow: ""
-  # Weibo: ""
-  # Odnoklassniki: ""
-  # VK: ""
-  # Flickr: ""
-  # Xing: ""
-  # Snapchat: ""
-  # Soundcloud: ""
-  # Spotify: ""
-  # Bandcamp: ""
-  # Paypal: ""
-  # Fivehundredpx: ""
-  # Mix: ""
-  # Goodreads: ""
-  # Lastfm: ""
-  # Foursquare: ""
-  # Hackernews: ""
-  # Kickstarter: ""
-  # Patreon: ""
-  # Steam: ""
-  # Twitch: ""
-  # Strava: ""
-  # Skype: ""
-  # Whatsapp: ""
-  # Zhihu: ""
-  # Douban: ""
-  # Angellist: ""
-  # Slidershare: ""
-  # Jsfiddle: ""
-  # Deviantart: ""
-  # Behance: ""
-  # Dribbble: ""
-  # Wordpress: ""
-  # Vine: ""
-  # Googlescholar: ""
-  # Researchgate: ""
-  # Mastodon: ""
-  # Thingiverse: ""
-  # Devto: ""
-  # Gitea: ""
-  # XMPP: ""
-  # Matrix: ""
-  # Bilibili: ""
-  # Discord: ""
-  # DiscordInvite: ""
-  # Lichess: ""
-  # ORCID: ""
-  # Pleroma: ""
-  # Kaggle: ""
-  # MediaWiki: ""
-  # Plume: ""
-  # HackTheBox: ""
-  # RootMe: ""
-  # Phone: ""
-  # RSS: true
+  RSS: true
 
 # 文章页面全局配置
 page:
   # 是否在主页隐藏文章
-  hiddenFromHomePage: true
+  hiddenFromHomePage: false
   # 是否在搜索结果中隐藏文章
   hiddenFromSearch: false
   # 是否使用 twemoji
@@ -237,8 +133,6 @@ page:
   toc:
     # 是否使用目录
     enable: true
-    # 是否保持使用文章前面的静态目录
-    # keepStatic: true
     # 是否使侧边目录自动折叠展开
     auto: true
   # 代码配置
@@ -246,62 +140,10 @@ page:
     # 是否显示代码块的复制按钮
     copy: true
     # 默认展开显示的代码行数
-    maxShownLines: 20
-  # KaTeX 数学公式
-  # math:
-  #   enable: false
-  #   # 默认行内定界符是 $ ... $ 和 \( ... \)
-  #   inlineLeftDelimiter: ""
-  #   inlineRightDelimiter: ""
-  #   # 默认块定界符是 $$ ... $$, \[ ... \],  \begin{equation} ... \end{equation} 和一些其它的函数
-  #   blockLeftDelimiter: ""
-  #   blockRightDelimiter: ""
-  #   # KaTeX 插件 copy_tex
-  #   copyTex: true
-  #   # KaTeX 插件 mhchem
-  #   mhchem: true
-  # Mapbox GL JS 配置
-  # mapbox:
-  #   # Mapbox GL JS 的 access token
-  #   accessToken: ""
-  #   # 浅色主题的地图样式
-  #   lightStyle: mapbox://styles/mapbox/light-v10?optimize=true
-  #   # 深色主题的地图样式
-  #   darkStyle: mapbox://styles/mapbox/dark-v10?optimize=true
-  #   # 是否添加 NavigationControl
-  #   navigation: true
-  #   # 是否添加 GeolocateControl
-  #   geolocate: true
-  #   # 是否添加 ScaleControl
-  #   scale: true
-  #   # 是否添加 FullscreenControl
-  #   fullscreen: true
+    maxShownLines: 30
   # 文章页面的分享信息设置
   share:
     enable: false
-    Baidu: true
-    # Whatsapp: true
-    # Twitter: false
-    # Facebook: false
-    # Linkedin: false
-    # Pinterest: false
-    # Tumblr: false
-    # HackerNews: false
-    # Reddit: false
-    # VK: false
-    # Buffer: false
-    # Xing: false
-    # Line: false
-    # Instapaper: false
-    # Pocket: false
-    # Flipboard: false
-    # Weibo: false
-    # Blogger: false
-    # Odnoklassniki: false
-    # Evernote: false
-    # Skype: false
-    # Trello: false
-    # Mix: false
   # 评论系统设置
   comment:
     enable: true
@@ -312,11 +154,6 @@ page:
       repo: "mushan-zb.github.io"
       clientId: "530a27e2e7c66133b4ea"
       clientSecret: "f8d3909650ee2a364ca9a0067be5252483ca5563"
-    # Disqus 评论系统设置
-    # disqus:
-    #   enable: false
-    #   # Disqus 的 shortname，用来在文章中启用 Disqus 评论系统
-    #   shortname: ""
     # Valine 评论系统设置
     # valine:
     #   enable: false
@@ -339,64 +176,6 @@ page:
     #   # 可以在你的项目下相同路径存放你自己的数据文件:
     #   # "assets/lib/valine/emoji/"
     #   emoji: ""
-    # Facebook 评论系统设置
-    # facebook:
-    #   enable: false
-    #   width: 100%
-    #   numPosts: 10
-    #   appId: ""
-    #   # 为空时自动适配当前主题 i18n 配置
-    #   languageCode: zh_CN
-    # Telegram Comments 评论系统设置
-    # telegram:
-    #   enable: false
-    #   siteID: ""
-    #   limit: 5
-    #   height: ""
-    #   color: ""
-    #   colorful: true
-    #   dislikes: false
-    #   outlined: false
-    # Commento 评论系统设置
-    # commento:
-    #   enable: false
-    # utterances 评论系统设置
-    # utterances:
-    #   enable: false
-    #   # owner/repo
-    #   repo: ""
-    #   issueTerm: pathname
-    #   label: ""
-    #   lightTheme: github-light
-    #   darkTheme: github-dark
-    # giscus comment 评论系统设置 (https://giscus.app/zh-CN)
-    # giscus:
-    #   enable: false
-    #   repo: ""
-    #   repoId: ""
-    #   category: Announcements
-    #   categoryId: ""
-    #   # 为空时自动适配当前主题 i18n 配置
-    #   lang: ""
-    #   mapping: pathname
-    #   reactionsEnabled: "1"
-    #   emitMetadata: "0"
-    #   inputPosition: bottom
-    #   lazyLoading: false
-    #   lightTheme: light
-    #   darkTheme: dark
-  # 第三方库配置
-  # library:
-  #   # someCSS = "some.css"
-  #   # 位于 "assets/"
-  #   # 或者
-  #   # someCSS = "https://cdn.example.com/some.css"
-  #   css: {}
-  #   # someJavascript = "some.js"
-  #   # 位于 "assets/"
-  #   # 或者
-  #   # someJavascript = "https://cdn.example.com/some.js"
-  #   js: {}
   # 页面 SEO 配置
   # seo:
   #   # 图片 URL
@@ -451,28 +230,3 @@ typeit:
 #   # Yandex Metrica
 #   yandexMetrica:
 #     id: ""
-
-# Cookie 许可配置
-# cookieconsent:
-#   enable: true
-#   # 用于 Cookie 许可横幅的文本字符串
-#   content:
-#     message: ""
-#     dismiss: ""
-#     link: ""
-
-# 第三方库文件的 CDN 设置
-# cdn:
-#   # CDN 数据文件名称, 默认不启用
-#   # ["jsdelivr.yml"]
-#   # 位于 "themes/LoveIt/assets/data/cdn/" 目录
-#   # 可以在你的项目下相同路径存放你自己的数据文件:
-#   # "assets/data/cdn/"
-#   data: ""
-
-# 兼容性设置
-# compatibility:
-#   # 是否使用 Polyfill.io 来兼容旧式浏览器
-#   polyfill: false
-#   # 是否使用 object-fit-images 来兼容旧式浏览器
-#   objectFit: false
