--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -31,7 +31,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.153.4  # 更新至当前最新的稳定版本[citation:1]
+      HUGO_VERSION: 0.112.5
     steps:
       - name: Install Hugo CLI
         run: |
